Update code to follow HTTP client API changes