@@ -3,13 +3,9 @@ package sdmxdl.provider.ri.monitors;
 import lombok.NonNull;
 import nbbrd.design.RepresentableAs;
 import nbbrd.design.StaticFactoryMethod;
-import nbbrd.io.http.URLQueryBuilder;
+import nbbrd.io.http.UriQueryBuilder;
 
-import java.io.IOException;
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.Locale;
 
 @RepresentableAs(URI.class)
@@ -37,29 +33,24 @@ class UpptimeId {
         return URI_SCHEME + ":/" + owner + "/" + repo + "/" + site;
     }
 
-    public @NonNull URI toSummaryURI() throws IOException {
-        try {
-            return URLQueryBuilder
-                    .of(new URL("https://raw.githubusercontent.com"))
-                    .path(owner)
-                    .path(repo)
-                    .path("master")
-                    .path("history")
-                    .path("summary.json")
-                    .build()
-                    .toURI();
-        } catch (URISyntaxException e) {
-            throw new IOException(e);
-        }
+    public @NonNull URI toSummaryURI() {
+        return UriQueryBuilder
+                .of(URI.create("https://raw.githubusercontent.com"))
+                .path(owner)
+                .path(repo)
+                .path("master")
+                .path("history")
+                .path("summary.json")
+                .build();
     }
 
-    public @NonNull URI toReportURI() throws MalformedURLException {
-        return URLQueryBuilder
-                .of(new URL("https://" + owner + ".github.io"))
+    public @NonNull URI toReportURI() {
+        return UriQueryBuilder
+                .of(URI.create("https://" + owner + ".github.io"))
                 .path(repo)
                 .path("history")
                 .path(getNormalizedSite())
-                .buildURI();
+                .build();
     }
 
     public @NonNull URI toURI() {
